# Automatic-trash-classification-bins

./: CMakeLists.txt  CMakeLists.txt.user.660ae68  CMakeLists.txt.user.6be372a  LICENSE  PCA9685.cpp  PCA9685.h  README.md  SmartTrashBin.cpp  SmartTrashBin.h  SmartTrashBin.ui  main.cpp  motor.cpp  team21.pptx  test_opencv.cpp  yolov5  yolov5.cpp  yolov5s.param
ncnn-master/examples/: yolov5.cpp
opencv/: CMakeLists.txt  capthread.cpp  capthread.h  main.cpp
trash models trained by Yolov5/: best-sim-opt-fp16.param
unit_tests/: unit_test.cpp
yolov5/: CMakeLists.txt  main.cpp  yolov5.cpp  yolov5.h
